--- a/index.html
+++ b/index.html
@@ -45,5 +45,8 @@
             <canvas id="canvas" width="1100" height="680"></canvas>
         </div>
     </div>
+    <footer style="position: fixed; bottom: 0; width: 100%; background: rgba(0, 0, 0, 0.8); color: white; text-align: center; padding: 10px; font-size: 1.2rem; font-weight: bold;">
+    Made by Fahad For Babhi
+</footer>
 </body>
 </html>
