--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>HBD love</title>	    
+    <title>HBD love</title>    
     <link type="text/css" rel="stylesheet" href="default.css">
     <script type="text/javascript" src="jquery.min.js"></script>
     <script type="text/javascript" src="jscex.min.js"></script>
@@ -45,8 +45,6 @@
             <canvas id="canvas" width="1100" height="680"></canvas>
         </div>
     </div>
-    <footer style="position: fixed; bottom: 0; width: 100%; background: rgba(0, 0, 0, 0.8); color: white; text-align: center; padding: 10px; font-size: 1.2rem; font-weight: bold;">
-    Made by Fahad For Babhi
-</footer>
+    <script src="script.js"></script>
 </body>
 </html>
